--- a/css/style.css
+++ b/css/style.css
@@ -99,10 +99,11 @@ button:hover {
 }
 
 .imagem-topo {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    padding-top: 30px;
-    margin-bottom: 20px;
+    justify-content: center;  
+    align-items: flex-start;   
+    margin-top: 40px;          
 }
 
 
