--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,13 @@ button:hover {
 }
 
 .imagem-topo {
-    width: 100%;
+    position: absolute;
+    top: 50%;  
+    left: 50%; 
+    transform: translate(-50%, -50%); 
     display: flex;
-    justify-content: center;  
-    align-items: flex-start;   
-    margin-top: 40px;          
+    justify-content: center;
+    align-items: center;
 }
 
 
